--- a/environment.yml
+++ b/environment.yml
@@ -5,9 +5,9 @@ channels:
   - pytorch
 dependencies:
   - python=3.7
-  - pytorch::pytorch=1.3
-  - pytorch::torchvision
-  - cudatoolkit=10.1
+  - pytorch
+  - torchvision
+  - cudatoolkit=11.8
   - pillow=6.2
   - ffmpeg
   - tqdm
